# lambda-launcher

./: .#lambda-launcher.cabal  .gitignore  README.md  default.nix  flake.nix  hie.yaml  lambda-launcher.cabal  lambda-launcher.nix  result-1  result-doc  stack.yaml  static.nix  wrapper.nix
src/: Main.hs  Types.hs
src/LambdaLauncher/: Main.hs  Plugins.hs  Types.hs
src/LambdaLauncher/Plugins/: .#Sway.hs  Clipman.hs  Command.hs  Dictionary.hs  Duckduckgo.hs  Emacs.hs  Files.hs  Google.hs  GoogleTranslate.hs  Kill.hs  Pass.hs  Pulseaudio.hs  Qalc.hs  Stackoverflow.hs  Support.hs  Sway.hs  UrbanDictionary.hs  Wiki.hs  Wmctrl.hs
src/Plugins/: Command.hs  Duckduckgo.hs  Emacs.hs  Files.hs  Google.hs  Main.hs  Qalc.hs  Stackoverflow.hs  Support.hs  Sway.hs  Wiki.hs  Wmctrl.hs
