name:                lambda-launcher
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable lambda-launcher
  main-is:              Main.hs
  build-depends:        base == 4.*
                      , process == 1.*
                      , directory == 1.*
                      , async == 2.*
                      , bytestring== 0.10.*
                      , gi-gobject == 2.*
                      , gi-glib == 2.*
                      , gi-gtk == 3.*
                      , gi-gtk-declarative == 0.*
                      , gi-gtk-declarative-app-simple == 0.*
                      , gi-gdk == 3.*
                      , haskell-gi == 0.*
                      , haskell-gi-base == 0.*
                      , text == 1.*
                      , vector == 0.*
                      , aeson == 1.*
                      , filepath == 1.*
                      , req
                      , data-default-class == 0.*
                      , fuzzy == 0.1.*
  hs-source-dirs:       src
  other-modules:        LambdaLauncher.Types
                      , LambdaLauncher.Main
                      , LambdaLauncher.Plugins
                      , LambdaLauncher.Plugins.Support
                      , LambdaLauncher.Plugins.Qalc
                      , LambdaLauncher.Plugins.Sway
                      , LambdaLauncher.Plugins.Files
                      , LambdaLauncher.Plugins.Google
                      , LambdaLauncher.Plugins.Command
                      , LambdaLauncher.Plugins.Emacs
                      , LambdaLauncher.Plugins.Wiki
                      , LambdaLauncher.Plugins.Stackoverflow
                      , LambdaLauncher.Plugins.Wmctrl
                      , LambdaLauncher.Plugins.Duckduckgo
                      , LambdaLauncher.Plugins.Kill
                      , LambdaLauncher.Plugins.GoogleTranslate
  default-language:     Haskell2010
  ghc-options:          -threaded
