name:                lambda-launcher
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable lambda-launcher
  main-is:              Main.hs
  build-depends:        base
                      , process
                      , directory
                      , async
                      , bytestring
                      , gi-gobject
                      , gi-glib
                      , gi-gtk
                      , gi-gtk-declarative
                      , gi-gtk-declarative-app-simple
                      , gi-gdk
                      , haskell-gi
                      , haskell-gi-base
                      , text
                      , vector
                      , aeson
                      , filepath
                      , req
                      , data-default-class
                      , fuzzy
                      , streamly
                      , safe-exceptions
                      , directory-tree
  hs-source-dirs:       src
  other-modules:        LambdaLauncher.Types
                      , LambdaLauncher.Main
                      , LambdaLauncher.Plugins
                      , LambdaLauncher.Plugins.Clipman
                      , LambdaLauncher.Plugins.Command
                      , LambdaLauncher.Plugins.Duckduckgo
                      , LambdaLauncher.Plugins.Emacs
                      , LambdaLauncher.Plugins.Files
                      , LambdaLauncher.Plugins.Google
                      , LambdaLauncher.Plugins.GoogleTranslate
                      , LambdaLauncher.Plugins.Kill
                      , LambdaLauncher.Plugins.Pass
                      , LambdaLauncher.Plugins.Qalc
                      , LambdaLauncher.Plugins.Stackoverflow
                      , LambdaLauncher.Plugins.Support
                      , LambdaLauncher.Plugins.Sway
                      , LambdaLauncher.Plugins.UrbanDictionary
                      , LambdaLauncher.Plugins.Wiki
                      , LambdaLauncher.Plugins.Wmctrl
  default-language:     Haskell2010
  ghc-options:          -threaded
